--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,16 @@
 
         <activity
             android:name=".RegisterActivity"
-            android:exported="true" />
+            android:exported="true" >
+        </activity>
+        <activity
+            android:name=".PaymentActivity"
+            android:exported="true" >
+        </activity>
+        <activity
+            android:name=".NewPlanActivity"
+            android:exported="true" >
+        </activity>
 
         <activity
             android:name=".MainActivity"
