--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.group5phft">
 
     <application
         android:allowBackup="true"
@@ -12,6 +13,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Group5PHFT"
         tools:targetApi="31">
+
+        <activity
+            android:name=".ProgressGraphView"
+            android:exported="false" />
+
+        <activity
+            android:name=".ProgressMonitoringActivity"
+            android:parentActivityName=".GoalSettingActivity"
+            android:exported="true" />  <!-- Added exported for consistency -->
+
+        <activity
+            android:name=".GoalSettingActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".ActivityCategoriesActivity"
+            android:exported="false" />
+
 
         <activity
             android:name=".LoginActivity"
