--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.group5phft">
-
+    
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -59,6 +59,10 @@
         </activity>
         <activity
             android:name=".TrackingCalories"
+            android:exported="true" >
+        </activity>
+        <activity
+            android:name=".TrackingDistance"
             android:exported="true" >
         </activity>
 
